# problem-frame-gate

./: .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  workflow.yml
docs/: ai-agent-quickstart.md  issue-codes.md  json-format.md  operations.md  pypi-release.md  quickstart.md  schema.md  security.md  theory-mapping.md
docs/examples/: gate-request.json  horizon.json  log.json
examples/: ai_agent_gate.py  broker_fake_dispatcher.py  memory_gate_commit.py  production_profile_rejects_assumption.py  sqlite_gate_commit.py
examples/unsafe/: gate-request.json  horizon.json  log.json
schemas/: envelope-log.schema.json  gate-bundle.schema.json  gate-request.schema.json  horizon.schema.json  join-proposal.schema.json  patch-proposal.schema.json  reachability.schema.json  replay-certificate.schema.json  risk-claim.schema.json  source-cut.schema.json
scripts/: benchmark_verify.py  generate_sbom.py
src/problem_frame_gate/: __init__.py  broker.py  certificates.py  cli.py  clock.py  digest.py  errors.py  fold.py  formation.py  gate.py  join.py  metrics.py  model.py  patch.py  profiles.py  reachability.py  records.py  result.py  risk.py  runtime.py  schema.py  security.py  signatures.py  storage.py  verifier.py
tests/: test_digest_security.py  test_docs_examples.py  test_formation_risk_cli.py  test_gate_patch_join.py  test_public_api_edges.py  test_records_and_strictness.py  test_v1_1_hardening.py  test_v1_completion.py  test_verifier.py
